src/main/gen/io/teocloud/teointellijidea/parser/TeoParser.java
// This is a generated file. Not intended for manual editing.
package io.teocloud.teointellijidea.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.teocloud.teointellijidea.psi.TeoTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class TeoParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return teoFile(b, l + 1);
  }

  /* ********************************************************** */
  // (LBRACE RBRACE)|(LBRACKET RBRACKET)
  public static boolean ARITY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARITY")) return false;
    if (!nextTokenIs(b, "<arity>", LBRACE, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARITY, "<arity>");
    r = ARITY_0(b, l + 1);
    if (!r) r = ARITY_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LBRACE RBRACE
  private static boolean ARITY_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARITY_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACE, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACKET RBRACKET
  private static boolean ARITY_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARITY_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACKET, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // QM
  public static boolean COLLECTION_OPTIONAL(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "COLLECTION_OPTIONAL")) return false;
    if (!nextTokenIs(b, QM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, QM);
    exit_section_(b, m, COLLECTION_OPTIONAL, r);
    return r;
  }

  /* ********************************************************** */
  // CONFIG_KEYWORD | CONNECTOR_KEYWORD | CLIENT_KEYWORD | ENTITY_KEYWORD
  public static boolean CONFIG_KEYWORDS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONFIG_KEYWORDS")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONFIG_KEYWORDS, "<config keywords>");
    r = consumeToken(b, CONFIG_KEYWORD);
    if (!r) r = consumeToken(b, CONNECTOR_KEYWORD);
    if (!r) r = consumeToken(b, CLIENT_KEYWORD);
    if (!r) r = consumeToken(b, ENTITY_KEYWORD);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // EOL | WSC
  public static boolean EOL_WSC(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EOL_WSC")) return false;
    if (!nextTokenIs(b, "<eol wsc>", EOL, WSC)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EOL_WSC, "<eol wsc>");
    r = consumeToken(b, EOL);
    if (!r) r = consumeToken(b, WSC);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // QM
  public static boolean ITEM_OPTIONAL(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ITEM_OPTIONAL")) return false;
    if (!nextTokenIs(b, QM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, QM);
    exit_section_(b, m, ITEM_OPTIONAL, r);
    return r;
  }

  /* ********************************************************** */
  // EOL_WSC+
  public static boolean WS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "WS")) return false;
    if (!nextTokenIs(b, "<ws>", EOL, WSC)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, WS, "<ws>");
    r = EOL_WSC(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!EOL_WSC(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "WS", c)) break;
    }
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // named_argument | expression
  public static boolean argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
    r = named_argument(b, l + 1);
    if (!r) r = expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LPAREN (argument (padded_comma argument)* padded_comma?)? RPAREN
  public static boolean argument_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && argument_list_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ARGUMENT_LIST, r);
    return r;
  }

  // (argument (padded_comma argument)* padded_comma?)?
  private static boolean argument_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1")) return false;
    argument_list_1_0(b, l + 1);
    return true;
  }

  // argument (padded_comma argument)* padded_comma?
  private static boolean argument_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = argument(b, l + 1);
    r = r && argument_list_1_0_1(b, l + 1);
    r = r && argument_list_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (padded_comma argument)*
  private static boolean argument_list_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argument_list_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argument_list_1_0_1", c)) break;
    }
    return true;
  }

  // padded_comma argument
  private static boolean argument_list_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = padded_comma(b, l + 1);
    r = r && argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // padded_comma?
  private static boolean argument_list_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1_0_2")) return false;
    padded_comma(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // padded_lbracket (expression (padded_comma expression)* padded_comma?)? padded_rbracket
  public static boolean array_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = padded_lbracket(b, l + 1);
    r = r && array_literal_1(b, l + 1);
    r = r && padded_rbracket(b, l + 1);
    exit_section_(b, m, ARRAY_LITERAL, r);
    return r;
  }

  // (expression (padded_comma expression)* padded_comma?)?
  private static boolean array_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1")) return false;
    array_literal_1_0(b, l + 1);
    return true;
  }

  // expression (padded_comma expression)* padded_comma?
  private static boolean array_literal_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1);
    r = r && array_literal_1_0_1(b, l + 1);
    r = r && array_literal_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (padded_comma expression)*
  private static boolean array_literal_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!array_literal_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "array_literal_1_0_1", c)) break;
    }
    return true;
  }

  // padded_comma expression
  private static boolean array_literal_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = padded_comma(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // padded_comma?
  private static boolean array_literal_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_2")) return false;
    padded_comma(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // padded_doc_comment padded_doc_comment* WS*
  public static boolean bad_doc_comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bad_doc_comment")) return false;
    if (!nextTokenIs(b, "<bad doc comment>", DOC_COMMENT, WSC)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BAD_DOC_COMMENT, "<bad doc comment>");
    r = padded_doc_comment(b, l + 1);
    r = r && bad_doc_comment_1(b, l + 1);
    r = r && bad_doc_comment_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // padded_doc_comment*
  private static boolean bad_doc_comment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bad_doc_comment_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!padded_doc_comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bad_doc_comment_1", c)) break;
    }
    return true;
  }

  // WS*
  private static boolean bad_doc_comment_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bad_doc_comment_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!WS(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bad_doc_comment_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // AT identifier_unit
  public static boolean bad_top_decorator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bad_top_decorator")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && identifier_unit(b, l + 1);
    exit_section_(b, m, BAD_TOP_DECORATOR, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean bad_top_identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bad_top_identifier")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, BAD_TOP_IDENTIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // ATAT identifier_unit
  public static boolean block_decorator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_decorator")) return false;
    if (!nextTokenIs(b, ATAT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ATAT);
    r = r && identifier_unit(b, l + 1);
    exit_section_(b, m, BLOCK_DECORATOR, r);
    return r;
  }

  /* ********************************************************** */
  // "Bool" | "String" | "ObjectId" | "Int" | "Int32" | "Int64" | "Float" | "Float32" | "Float64" | "Date" | "DateTime"
  public static boolean builtin_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUILTIN_TYPE, "<builtin type>");
    r = consumeToken(b, "Bool");
    if (!r) r = consumeToken(b, "String");
    if (!r) r = consumeToken(b, "ObjectId");
    if (!r) r = consumeToken(b, "Int");
    if (!r) r = consumeToken(b, "Int32");
    if (!r) r = consumeToken(b, "Int64");
    if (!r) r = consumeToken(b, "Float");
    if (!r) r = consumeToken(b, "Float32");
    if (!r) r = consumeToken(b, "Float64");
    if (!r) r = consumeToken(b, "Date");
    if (!r) r = consumeToken(b, "DateTime");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LINE_COMMENT
  public static boolean comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment")) return false;
    if (!nextTokenIs(b, LINE_COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LINE_COMMENT);
    exit_section_(b, m, COMMENT, r);
    return r;
  }

  /* ********************************************************** */
  // padded_lbrace (WS? (config_item|comment) EOL)* padded_rbrace
  public static boolean config_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_block")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = padded_lbrace(b, l + 1);
    r = r && config_block_1(b, l + 1);
    r = r && padded_rbrace(b, l + 1);
    exit_section_(b, m, CONFIG_BLOCK, r);
    return r;
  }

  // (WS? (config_item|comment) EOL)*
  private static boolean config_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!config_block_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "config_block_1", c)) break;
    }
    return true;
  }

  // WS? (config_item|comment) EOL
  private static boolean config_block_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_block_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = config_block_1_0_0(b, l + 1);
    r = r && config_block_1_0_1(b, l + 1);
    r = r && consumeToken(b, EOL);
    exit_section_(b, m, null, r);
    return r;
  }

  // WS?
  private static boolean config_block_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_block_1_0_0")) return false;
    WS(b, l + 1);
    return true;
  }

  // config_item|comment
  private static boolean config_block_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_block_1_0_1")) return false;
    boolean r;
    r = config_item(b, l + 1);
    if (!r) r = comment(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // CONFIG_KEYWORDS (WS+ IDENTIFIER)? WS+ config_block
  public static boolean config_definition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_definition")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONFIG_DEFINITION, "<config definition>");
    r = CONFIG_KEYWORDS(b, l + 1);
    r = r && config_definition_1(b, l + 1);
    r = r && config_definition_2(b, l + 1);
    r = r && config_block(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (WS+ IDENTIFIER)?
  private static boolean config_definition_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_definition_1")) return false;
    config_definition_1_0(b, l + 1);
    return true;
  }

  // WS+ IDENTIFIER
  private static boolean config_definition_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_definition_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = config_definition_1_0_0(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  // WS+
  private static boolean config_definition_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_definition_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = WS(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!WS(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "config_definition_1_0_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // WS+
  private static boolean config_definition_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_definition_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = WS(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!WS(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "config_definition_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // doc_comment_block? config_item_name WS+ expression
  public static boolean config_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_item")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONFIG_ITEM, "<config item>");
    r = config_item_0(b, l + 1);
    r = r && config_item_name(b, l + 1);
    r = r && config_item_2(b, l + 1);
    r = r && expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // doc_comment_block?
  private static boolean config_item_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_item_0")) return false;
    doc_comment_block(b, l + 1);
    return true;
  }

  // WS+
  private static boolean config_item_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_item_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = WS(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!WS(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "config_item_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean config_item_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "config_item_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CONFIG_ITEM_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // padded_lbrace (named_expression (padded_comma named_expression)* padded_comma?)? padded_rbrace
  public static boolean dictionary_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dictionary_literal")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = padded_lbrace(b, l + 1);
    r = r && dictionary_literal_1(b, l + 1);
    r = r && padded_rbrace(b, l + 1);
    exit_section_(b, m, DICTIONARY_LITERAL, r);
    return r;
  }

  // (named_expression (padded_comma named_expression)* padded_comma?)?
  private static boolean dictionary_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dictionary_literal_1")) return false;
    dictionary_literal_1_0(b, l + 1);
    return true;
  }

  // named_expression (padded_comma named_expression)* padded_comma?
  private static boolean dictionary_literal_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dictionary_literal_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = named_expression(b, l + 1);
    r = r && dictionary_literal_1_0_1(b, l + 1);
    r = r && dictionary_literal_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (padded_comma named_expression)*
  private static boolean dictionary_literal_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dictionary_literal_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dictionary_literal_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dictionary_literal_1_0_1", c)) break;
    }
    return true;
  }

  // padded_comma named_expression
  private static boolean dictionary_literal_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dictionary_literal_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = padded_comma(b, l + 1);
    r = r && named_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // padded_comma?
  private static boolean dictionary_literal_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dictionary_literal_1_0_2")) return false;
    padded_comma(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // padded_doc_comment padded_doc_comment* WS*
  public static boolean doc_comment_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_comment_block")) return false;
    if (!nextTokenIs(b, "<doc comment block>", DOC_COMMENT, WSC)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOC_COMMENT_BLOCK, "<doc comment block>");
    r = padded_doc_comment(b, l + 1);
    r = r && doc_comment_block_1(b, l + 1);
    r = r && doc_comment_block_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // padded_doc_comment*
  private static boolean doc_comment_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_comment_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!padded_doc_comment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "doc_comment_block_1", c)) break;
    }
    return true;
  }

  // WS*
  private static boolean doc_comment_block_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_comment_block_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!WS(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "doc_comment_block_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // DOT enum_member_name
  public static boolean enum_choice_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_choice_literal")) return false;
    if (!nextTokenIs(b, DOT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && enum_member_name(b, l + 1);
    exit_section_(b, m, ENUM_CHOICE_LITERAL, r);
    return r;
  }

  /* ********************************************************** */
  // doc_comment_block? item_decorator_list? ENUM_KEYWORD WS IDENTIFIER WS? enum_definition_block
  public static boolean enum_definition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_definition")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_DEFINITION, "<enum definition>");
    r = enum_definition_0(b, l + 1);
    r = r && enum_definition_1(b, l + 1);
    r = r && consumeToken(b, ENUM_KEYWORD);
    r = r && WS(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    r = r && enum_definition_5(b, l + 1);
    r = r && enum_definition_block(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // doc_comment_block?
  private static boolean enum_definition_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_definition_0")) return false;
    doc_comment_block(b, l + 1);
    return true;
  }

  // item_decorator_list?
  private static boolean enum_definition_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_definition_1")) return false;
    item_decorator_list(b, l + 1);
    return true;
  }

  // WS?
  private static boolean enum_definition_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_definition_5")) return false;
    WS(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // padded_lbrace (block_decorator | enum_value_declaration | comment | WS)* padded_rbrace
  public static boolean enum_definition_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_definition_block")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = padded_lbrace(b, l + 1);
    r = r && enum_definition_block_1(b, l + 1);
    r = r && padded_rbrace(b, l + 1);
    exit_section_(b, m, ENUM_DEFINITION_BLOCK, r);
    return r;
  }

  // (block_decorator | enum_value_declaration | comment | WS)*
  private static boolean enum_definition_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_definition_block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!enum_definition_block_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enum_definition_block_1", c)) break;
    }
    return true;
  }

  // block_decorator | enum_value_declaration | comment | WS
  private static boolean enum_definition_block_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_definition_block_1_0")) return false;
    boolean r;
    r = block_decorator(b, l + 1);
    if (!r) r = enum_value_declaration(b, l + 1);
    if (!r) r = comment(b, l + 1);
    if (!r) r = WS(b, l + 1);
    return r;
  }
